Fix: banner height on mobile

--- a/src/sass/utilities/_container.scss
+++ b/src/sass/utilities/_container.scss
@@ -96,9 +96,9 @@
 	// after logo was made inline SVG
 	margin-top: calc(var(--_primary-header-ht) * (-0.8));
 
-	// @include mqmax(small) {
-	// 	margin-top: calc(var(--_primary-header-ht) * (-0.8));
-	// }
+	@include mqmax(small) {
+		margin-top: calc(var(--_primary-header-ht) * (-1.0));
+	}
 
 	width: 100vw;
 	min-height: 101vh;
